--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
   <div class="row">
       <div class="col-sm-6">
          <h3>Favorite Hobby </h3>
-         <p>Type up a description of your favorite hobby here.</p>
+         <p>Watching Charles try to eat poop all day.</p>
       </div>
       <div class="col-sm-6">
          <h3>Favorite Memory </h3>
-         <p>Type up a description of your favorite hobby here.</p>
+         <p>When Charles Czieski ate his own poop.</p>
       </div>
   </div>
   <div class="row">
