--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
          <h3>Favorite Memory </h3>
          <p>When Charles Czieski ate his own poop.</p>
       </div>
+      <div class="row">
+        <div class="col-sm-6">
+          <h3>Upcoming Events</h3>
+          <p>No events to put in here yet.  Just creating a new row</p>
+        </div>
+        <div class="col-sm-6">
+          <h3>Placeholder</h3>
+          <p>Another Placeholder</p>
+        </div>
+      </div>
   </div>
   <div class="row">
       <div class="col-sm-12">
