--- a/index.html
+++ b/index.html
@@ -39,6 +39,22 @@
         <div class="col-sm-6">
           <h3>Placeholder</h3>
           <p>Another Placeholder</p>
+          <table>
+            <tr>row 1
+              <td>column</td>
+              <td>column</td>
+              <td>column</td>
+            </tr>
+            <tr>row2
+              <td>column</td>
+              <td>column</td>
+              <td>column</td>
+            </tr>
+            <tr>row3
+              <td>column</td>
+              <td>column</td>
+              <td>column</td>
+            </tr>
         </div>
       </div>
   </div>
