--- a/index.html
+++ b/index.html
@@ -33,45 +33,8 @@
       </div>
       <div class="row">
         <div class="col-sm-6">
-          <h3>Upcoming Events</h3>
+          <h3>More about Myself</h3>
           <p>No events to put in here yet.  Just creating a new row</p>
-          <table>
-            <tr>
-              <td> column </td>
-              <td> column </td>
-              <td> column </td>
-              <td> column </td>
-              <td> column </td>
-              <td> column </td>
-              <td> column </td>
-            </tr>
-            <tr>
-              <td> column </td>
-              <td> column </td>
-              <td> column </td>
-              <td> column </td>
-              <td> column </td>
-              <td> column </td>
-              <td> column </td>
-            </tr>
-            <tr>
-              <td> column </td>
-              <td> column </td>
-              <td> column </td>
-              <td> column </td>
-              <td> column </td>
-              <td> column </td>
-              <td> column </td>
-            </tr>
-             <tr>
-              <td> column </td>
-              <td> column </td>
-              <td> column </td>
-              <td> column </td>
-              <td> column </td>
-              <td> column </td>
-              <td> column </td>
-            </tr>
         </div>
         <div class="col-sm-6">
           <h3>Placeholder</h3>
@@ -81,8 +44,69 @@
   </div>
   <div class="row">
       <div class="col-sm-12">
-         <h3>More about Me </h3>
+         <h3>Upcoming Events </h3>
          <p>Type up some more stuff about yourself here. It could be your life story. It could be a short story.</p>
+             <header>
+                <button>«</button>
+                <h2>March 2016</h2>
+                <button>»</button>
+             </header>
+              <table>
+                <tr>
+                  <td>S</td>
+                  <td>M</td>
+                  <td>T</td>
+                  <td>W</td>
+                  <td>Th</td>
+                  <td>F</td>
+                  <td>S</td>
+                </tr>
+                <tr>
+                  <td></td>
+                  <td></td>
+                  <td>1</td>
+                  <td>2</td>
+                  <td>3</td>
+                  <td>4</td>
+                  <td>5</td>
+                </tr>
+                <tr>
+                  <td>6</td>
+                  <td>7</td>
+                  <td>8</td>
+                  <td>9</td>
+                  <td>10</td>
+                  <td>11</td>
+                  <td>12</td>
+                </tr>
+                <tr>
+                  <td>13</td>
+                  <td>14</td>
+                  <td>15</td>
+                  <td>16</td>
+                  <td class="selected">17</td>
+                  <td>18</td>
+                  <td>19</td>
+                </tr>
+                <tr>
+                  <td>20</td>
+                  <td>21</td>
+                  <td>22</td>
+                  <td>23</td>
+                  <td>24</td>
+                  <td>25</td>
+                  <td>26</td>
+                </tr>
+                <tr>
+                  <td>27</td>
+                  <td>28</td>
+                  <td>29</td>
+                  <td>30</td>
+                  <td>31</td>
+                  <td></td>
+                  <td></td>
+                </tr>
+              </table>
       </div>
   </div>
 </div>
