--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <div class="row">
       <div class="col-sm-12">
          <h3>Upcoming Events </h3>
-         <p>Type up some more stuff about yourself here. It could be your life story. It could be a short story.</p>
+         <p>Type up some more stuff about yourself here. It could be your life story. It could be a short story.</p><br><br>
              <header>
                 <button>«</button>
                 <h2>March 2016</h2>
