minor table change

--- a/index.html
+++ b/index.html
@@ -46,12 +46,14 @@
       <div class="col-sm-12">
          <h3>Upcoming Events </h3>
          <p>Type up some more stuff about yourself here. It could be your life story. It could be a short story.</p><br><br>
+             
+             <Table>
              <header>
                 <button>«</button>
                 <h2>March 2016</h2>
                 <button>»</button>
              </header>
-              <table>
+              
                 <tr>
                   <td>S</td>
                   <td>M</td>
