--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
          <p>Type up some more stuff about yourself here. It could be your life story. It could be a short story.</p><br><br>
              
              <Table>
-              <tr>
+              <tr id="colorHead">
              <header>
                 <button>«</button>
                 <h2>March 2016</h2>
